# xoken-core

./: .gitignore  README.md  stack.yaml
core/: .xoken-core.cabal.swp  stack.yaml  xoken-core.cabal
core/src/: Xoken.hs
core/src/Network/Xoken/: .Script.hs.swp  Address.hs  Block.hs  Constants.hs  Crypto.hs  Keys.hs  Network.hs  Script.hs  Test.hs  Transaction.hs  Util.hs
core/src/Network/Xoken/Address/: Base58.hs
core/src/Network/Xoken/Block/: Common.hs  Headers.hs  Merkle.hs
core/src/Network/Xoken/Crypto/: Hash.hs  Signature.hs
core/src/Network/Xoken/Keys/: Common.hs  Extended.hs  Mnemonic.hs
core/src/Network/Xoken/Network/: Common.hs  CompactBlock.hs  Message.hs
core/src/Network/Xoken/Script/: .Interpreter.hs.swp  Common.hs  Interpreter.hs  OpenSSL_BN.hs  SigHash.hs  Standard.hs
core/src/Network/Xoken/Script/Interpreter/: Commands.hs  Internal.hs  OpenSSL_BN.hs  Operations.hs  Util.hs
core/src/Network/Xoken/Test/: Address.hs  Block.hs  Crypto.hs  Keys.hs  Message.hs  Network.hs  Script.hs  Transaction.hs  Util.hs
core/src/Network/Xoken/Transaction/: Builder.hs  Coinbase.hs  Common.hs  Partial.hs
core/test/Network/Xoken/: AddressSpec.hs  BlockSpec.hs  CryptoSpec.hs  KeysSpec.hs  NetworkSpec.hs  ScriptInterpreterSpec.hs  ScriptSpec.hs  TransactionSpec.hs
core/test/Network/Xoken/Address/: Bech32Spec.hs
core/test/Network/Xoken/Crypto/: SignatureSpec.hs
core/test/Network/Xoken/Keys/: ExtendedSpec.hs
core/test/Network/Xoken/Script/: NonStandard.hs
